[gd_scene load_steps=19 format=3 uid="uid://cmqfu6lt4wicv"]

[ext_resource type="Script" uid="uid://jc77jnbbkuvs" path="res://sea.gd" id="1_j5hem"]
[ext_resource type="PackedScene" uid="uid://xyb6o5gqthi2" path="res://player_ship.tscn" id="2_f1b51"]
[ext_resource type="Script" uid="uid://d0pemlxry8a1c" path="res://player_camera.gd" id="3_6v482"]
[ext_resource type="Script" uid="uid://colodbh4ytdb1" path="res://wind_particles.gd" id="14_kb7iw"]
[ext_resource type="Script" uid="uid://c5taoms3yt1wi" path="res://wind.gd" id="15_clrxa"]
[ext_resource type="PackedScene" uid="uid://uws8en35sklf" path="res://spawners/enemy_spawner/enemy_spawner.tscn" id="16_t5xib"]
[ext_resource type="Script" uid="uid://ct0mm4rbfdlm6" path="res://background.gd" id="17_cyn00"]
[ext_resource type="PackedScene" uid="uid://88md3i7p5702" path="res://hud/kill_screen.tscn" id="18_26muk"]
[ext_resource type="PackedScene" uid="uid://dpdoenrgimjkw" path="res://abilities/ability_cards.tscn" id="19_7gfbx"]
[ext_resource type="PackedScene" uid="uid://cuk2drxe2dov2" path="res://hud/cargo_counter.tscn" id="20_hsywv"]
[ext_resource type="PackedScene" uid="uid://btlqah2g7f5lk" path="res://hud/survivor_time.tscn" id="21_8rl0e"]
[ext_resource type="PackedScene" uid="uid://b66eer0eet1j7" path="res://hud/hitpoints.tscn" id="22_fi52g"]
[ext_resource type="Script" uid="uid://sl7mlnyefejt" path="res://abilities/ability.gd" id="23_kcpbk"]
[ext_resource type="Resource" uid="uid://vs3qhquaylj" path="res://abilities/info/cannon_cooling.tres" id="24_f5fde"]
[ext_resource type="Resource" uid="uid://d3slri3n4gn4o" path="res://abilities/info/piercing.tres" id="25_e1rhi"]
[ext_resource type="Resource" uid="uid://dtatsy3jllmwu" path="res://abilities/info/side_cannons.tres" id="26_nrvvb"]
[ext_resource type="Resource" uid="uid://ktrn4wes4mhh" path="res://abilities/info/friendly_ships.tres" id="27_h8u0i"]
[ext_resource type="Resource" uid="uid://bpm1fplv02c6f" path="res://abilities/info/barrels.tres" id="28_3yrw7"]

[node name="Sea" type="Node"]
script = ExtResource("1_j5hem")

[node name="PlayerShip" parent="." node_paths=PackedStringArray("world") instance=ExtResource("2_f1b51")]
unique_name_in_owner = true
rotation = -1.5708
world = NodePath("..")

[node name="PlayerCamera" type="Camera2D" parent="PlayerShip"]
rotation = -1.5708
script = ExtResource("3_6v482")

[node name="WindParticles" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("14_kb7iw")

[node name="Wind" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("15_clrxa")
max_speed = 20.0
min_speed = 5.0
max_change_duration = 20.0
min_change_duration = 5.0

[node name="WindChangeTimer" type="Timer" parent="Wind"]
wait_time = 15.0
one_shot = true

[node name="EnemySpawner" parent="." node_paths=PackedStringArray("world") instance=ExtResource("16_t5xib")]
world = NodePath("..")

[node name="BarrelSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="ManOverboardSpawnTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Background" type="Node2D" parent="."]
z_index = -10
script = ExtResource("17_cyn00")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="KillScreen" parent="HUD" instance=ExtResource("18_26muk")]
unique_name_in_owner = true
visible = false

[node name="AbilityCards" parent="HUD" instance=ExtResource("19_7gfbx")]
unique_name_in_owner = true
process_mode = 3
visible = false

[node name="CargoCounter" parent="HUD" instance=ExtResource("20_hsywv")]
unique_name_in_owner = true

[node name="SurvivorTime" parent="HUD" instance=ExtResource("21_8rl0e")]
unique_name_in_owner = true

[node name="PlayerHitpoints" parent="HUD" instance=ExtResource("22_fi52g")]
unique_name_in_owner = true

[node name="Abilities" type="Node" parent="."]
unique_name_in_owner = true

[node name="Cooling" type="Node" parent="Abilities"]
script = ExtResource("23_kcpbk")
info = ExtResource("24_f5fde")
metadata/_custom_type_script = "uid://sl7mlnyefejt"

[node name="Piercing" type="Node" parent="Abilities"]
script = ExtResource("23_kcpbk")
info = ExtResource("25_e1rhi")
metadata/_custom_type_script = "uid://sl7mlnyefejt"

[node name="SideCannons" type="Node" parent="Abilities"]
script = ExtResource("23_kcpbk")
info = ExtResource("26_nrvvb")
metadata/_custom_type_script = "uid://sl7mlnyefejt"

[node name="FriendlyShips" type="Node" parent="Abilities"]
script = ExtResource("23_kcpbk")
info = ExtResource("27_h8u0i")
metadata/_custom_type_script = "uid://sl7mlnyefejt"

[node name="Barrels" type="Node" parent="Abilities"]
script = ExtResource("23_kcpbk")
info = ExtResource("28_3yrw7")
metadata/_custom_type_script = "uid://sl7mlnyefejt"

[connection signal="cargo_updated" from="PlayerShip" to="." method="_on_player_ship_cargo_updated"]
[connection signal="health_updated" from="PlayerShip" to="." method="_on_player_ship_health_updated"]
[connection signal="max_health_updated" from="PlayerShip" to="." method="_on_player_ship_max_health_updated"]
[connection signal="timeout" from="Wind/WindChangeTimer" to="Wind" method="schedule_next_time_change"]
[connection signal="timeout" from="Wind/WindChangeTimer" to="Wind" method="randomize_wind"]
[connection signal="timeout" from="BarrelSpawnTimer" to="." method="_on_barrel_spawn_timer_timeout"]
[connection signal="timeout" from="ManOverboardSpawnTimer" to="." method="_on_man_overboard_spawn_timer_timeout"]
[connection signal="leveled_up" from="Abilities/Cooling" to="." method="_on_cooling_leveled_up"]
[connection signal="leveled_up" from="Abilities/Piercing" to="." method="_on_piercing_leveled_up"]
[connection signal="leveled_up" from="Abilities/SideCannons" to="." method="_on_side_cannons_leveled_up"]
[connection signal="leveled_up" from="Abilities/FriendlyShips" to="." method="_on_friendly_ships_leveled_up"]
[connection signal="leveled_up" from="Abilities/Barrels" to="." method="_on_barrels_leveled_up"]
